--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,7 +25,9 @@
 $body-font-family: "abba3000";
 $code-font-family: monospace;
 $body-font-size: 14px;
-$prose-font-size: 20px;
+$prose-font-size: 16px;
+
+
 
 
 
@@ -42,7 +44,7 @@ $h5-size: 16px !default;
 $h6-size: 8px !default;
 
 // Default border color
-$color-border: #ddd !default;
+$color-border: #000 !default;
 
 // Container width
 $container-width: 64em;
