--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="border-bottom-thick px-2 clearfix">
+<header class="border-bottom-thin px-2 clearfix">
   <div class="left sm-width-full py-1 mt-1 mt-lg-0">
     <a class="align-middle link-primary text-accent" href="{{ site.baseurl }}/">
       {{ site.title }}
