--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
       <header class="header-background">
 
         <div class="clearfix border-bottom-thick header-border">
-          <ul class="list-reset right py-1 header-text font-smoothing">
+          <ul class=" list-reset right py-1 header-text font-smoothing">
             {% for my_page in site.pages %}
               {% if my_page.title %}
               <li class="inline-block">
@@ -28,22 +28,24 @@
             <div class="col-4 sm-width-full left border-top-thin">
               <div class="table">
                 <div class="inline-block mt-3 mr-1">
-                  {% include dot-accent.html %}
+                  {% include dot-accent.html class="blink_0" %}
                 </div>
+
+
                 <div class="inline-block mt-3 mr-1">
-                  {% include dot-accent.html %}
+                  {% include dot-accent.html class="blink_1" %}
                 </div>
                 <div class="inline-block mt-3">
                   {% include github.html %}
                 </div>
               </div>
               <!-- Set site description in config.yml -->
-              <p class="h4 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
+              <p class="bold h4 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
             </div>
 
             <div class="col-4 sm-width-full left border-top-thin mt-3 mt-lg-0 ml-lg-4 table">
                 <div class="inline-block mt-3 mr-1">
-                  {% include dot.html %}
+                  {% include dot-accent.html class="blink_2" %}
                 </div>
                 <div class="inline-block mt-3">
                   <!-- {% include {{ site.social_link | default: "twitter" }}.html %} -->
