--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -2,53 +2,58 @@
 
 // Code formatting
 pre {
-    border-left: $spacer-1 solid $color-border;
-    margin: $spacer-3 0;
-    padding: 16px;
-    width: (9 / 12 * 100%); // matches col-9
-    overflow-x: auto;
-    background-color :#c0c0c04f;
+  border-left: $spacer-1 solid $color-border;
+  margin: $spacer-3 0;
+  padding: 16px;
+  width: (9 / 12 * 100%); // matches col-9
+  overflow-x: auto;
+  background-color : white;
 }
 
 code {
-    color: gray;
-    font-size: $body-font-size;
-    padding: 1px 0px;
-    text-transform: none;
-    .cp {
-      color: #5E6D03;
+  color: gray;
+  font-size: $body-font-size;
+  padding: 1px 0px;
+  text-transform: none;
+  .cp {
+    color: #5E6D03;
 
-    }
+  }
 
-    .n {
-      color: #D35400;
-    }
+  .n {
+    color: #D35400;
+  }
 
-    .k, .kt {
-      color: #00979C;
-    }
+  .k, .kt {
+    color: #00979C;
+  }
 }
 
 
 
 
-  a.red {
-    text-decoration:none;
-    background-color: $red;
-    padding-left: 1em;
-    padding-right: 1em;
+a.red {
+  text-decoration:none;
+  background-image: linear-gradient(120deg, $red 0%, $red 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 100%;
+  transition: 0.1s;
+  padding: 0 .3em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  &:hover {
+    background-size: 100% 100%;
     color: white;
-    &:hover {
-      text-decoration: none;
-    }
   }
+}
 
 
 .prose {
 
   font-family: $code-font-family;
   text-transform: none;
-  
+
   a {
     text-decoration:none;
     &:hover {
