--- a/_sass/_theme-white.scss
+++ b/_sass/_theme-white.scss
@@ -2,10 +2,25 @@
 
 // Color variables
 $black: #181818;
-$red: #E74727;
-$red-dark: #DC3918;
+$red: #ff606b;
+$red-dark: #ff606b;
 $gray-light: #f5f5f5;
 $white: #fff;
+$tuerkis: #60fffc;
+
+.blink_0 {
+  fill: $tuerkis;
+}
+
+.blink_1 {
+  fill: white;
+}
+
+.blink_2 {
+  fill: $red;
+}
+
+
 
 // Config
 $color-background: $gray-light !default;
