--- a/_sass/_theme-white.scss
+++ b/_sass/_theme-white.scss
@@ -25,8 +25,8 @@ $tuerkis: #60fffc;
 // Config
 $color-background: $gray-light !default;
 $color-dot-accent: $red !default;
-$color-foreground: $black !default;
-$color-title: $black !default;
+$color-foreground: $white !default;
+$color-title: $white !default;
 $color-body-text: $black !default;
 $color-text-accent: $red-dark !default;
 $color-code: $red-dark !default;
