--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@
                 </div>
               </div>
               <!-- Set site description in config.yml -->
-              <p class="bold h4 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
+              <p class=" h4 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
             </div>
 
             <div class="col-4 sm-width-full left border-top-thin mt-3 mt-lg-0 ml-lg-4 table">
