--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -29,7 +29,10 @@ code {
   }
 }
 
+.abba {
+    font-family: $body-font-family!important;
 
+}
 
 
 a.red {
@@ -39,12 +42,13 @@ a.red {
   background-size: 100% 0.2em;
   background-position: 0 100%;
   transition: 0.1s;
-  padding: 0 .3em;
+  padding: 0;
   text-transform: uppercase;
   letter-spacing: 1px;
   &:hover {
     background-size: 100% 100%;
     color: white;
+    padding: .5em 0.5em 0.3em 0.5em;
   }
 }
 
