--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -48,7 +48,7 @@ a.red {
   &:hover {
     background-size: 100% 100%;
     color: white;
-    padding: .5em 0.5em 0.3em 0.5em;
+    padding: .5em ;
   }
 }
 
