--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,9 +52,9 @@ h1, h2, h3, h4, h5, h6 {
 h1, .h1 { font-size: $h1-size; }
 h2, .h2 {
   font-size: $h2-size;
-
+  text-transform: uppercase;
   letter-spacing: 1px;
-  font-family: $code-font-family;
+  font-family: $body-font-family;
 }
 h3, .h3 { font-size: $h3-size; }
 h4, .h4 { font-size: $h4-size; }
